--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,18 +8,8 @@
 
 @foreach (Book b in Model.Books)
             {
-                <h3>@b.Title</h3>
-                
-                <ul>
-                    <li>Author: @b.Author</li>
-                    <li>Publisher: @b.Publisher</li>
-                    <li>Isbn: @b.Isbn</li>
-                    <li>Classifcation: @b.Classification</li>
-                    <li>Category: @b.Category</li>
-                    <li>Number of Pages: @b.PageCount</li>
-                    <li>Price: @b.Price</li>
-                </ul>
-
-                <br />
+                <partial name="ProjectSummary" model="b" />
             }
-<div page-blah="@Model.PageInfo"  page-action="Index" page-info="btn-primary"></div>
+<div page-blah="@Model.PageInfo"  page-action="Index" page-class="btn"
+     page-class-normal="btn-outline-dark" page-class-selected="btn-primary" page-classes-enabled="true"
+     class="btn-group pull-right m-1"></div>
