--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,20 +4,21 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    <link href="/lib/twitter-bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/lib/twitter-bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
     <div class="bg-dark text-white p-2">
-        <span class="navbar-brand ml-2">@ViewBag.Title</span>
-        <div>
+        <span class="navbar-brand ml-lg-2">ONLINE BOOKSTORE</span>
+    </div>
             <div class="row m-1 p-1">
-                <div id="categories" class="col-3">
+                <div id="types" class="col-3">
+                    <vc:categories></vc:categories>
                 </div>
                 <div class="col-9">
+                <div>
                     @RenderBody()
                 </div>
                 </div>
             </div>
-        </div>
 </body>
 </html>
